napolicalcio.internal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: napolicalcio-service
spec:
  selector:
    app: napolicalcio
  ports:
    - port: 80
      targetPort: 80
