napolicalcio.internal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: napolicalcio-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - napolicalcio.internal
    secretName: tls-certificate
  rules:
  - host: napolicalcio.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: napolicalcio-service
            port:
              number: 80
